# STLAR

./: .gitignore  CLI_IMPLEMENTATION_SUMMARY.md  CONSENSUS_DETECTION.md  CONSENSUS_QUICKSTART.md  CONSENSUS_SUMMARY.md  CONSOLIDATION_EXECUTIVE_SUMMARY.md  CONSOLIDATION_SUMMARY.md  MULTISELECT_EOI_CHANGES.md  PPM_ISSUE_ANALYSIS.md  PRESET_GATING_GUIDE.md  PYHFO_SETUP.md  README.md  REFACTORED_DESIGN.md  SPEED_COLUMN_IMPLEMENTATION.md  TFplots.py  dump-probs.py  main.py  pyproject.toml  requirements.txt  setup.py  test_cli_debug.py  test_consensus.py
HFOScores/: _DL_settings.txt  _DL_settings_2.txt
docs/: CLI_ADVANCED.md  CONSENSUS_DETECTION.md  CONSENSUS_QUICKSTART.md  CONSENSUS_SUMMARY.md  CONTAINERIZATION_GUIDE.md  CWT_DEBUG_GUIDE.md  DETECTION_TUNING.md  DL_TRAINING_ADVANCED.md  GUI_QUICKSTART.md  OPTIMIZATION_REVIEW.md  PYHFO_SETUP.md  TECHNICAL_REFERENCE.md  TRAINING_VISUALIZATION.md
hfoGUI/: __main__.py  cli.py  intan_rhd_format.py  main.py
hfoGUI/core/: ChooseFile.py  Detector.py  GUI_Utils.py  GraphSettings.py  Intan_to_Tint.py  Score.py  TFplots.py  Tint_Matlab.py  eoi_exporter.py  hfo_classifier.py
hfoGUI/dl_training/: README.md  cwt_utils.py  data.py  export.py  manifest_splitter.py  model.py  prepare_segments.py  train.py  training_gui.py
hfoGUI/exporters/: Exporter.py
hfoGUI/settings/: profiles.json
legacy/pyhfogui/hfoGUI/: cli.py
legacy/pyhfogui/hfoGUI/core/: GraphSettings.py  Score.py
legacy/pyhfogui/hfoGUI/dl_training/: manifest_splitter.py  model.py
settings/: consensus_params.json  hilbert_params.json  last_session.json  mni_params.json  profiles.json  ste_params.json
spatial_mapper/: README.md
spatial_mapper/src/: batch_ssm.py  initialize_fMap.py  main.py
spatial_mapper/src/core/: data_loaders.py
spatial_mapper/src/core/processors/: Tint_Matlab.py  spectral_functions.py
stlar/: __init__.py  __main__.py
tests/: test_cli_debug.py  test_cli_smoke.py  test_consensus.py  test_cwt_debug.py  test_dl_optional.py  test_split.py
